Fix title size on mobile

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -31,6 +31,7 @@
 
   /* FONTS */
   --font-sm: var(--size-3);
+  --font-title: calc(var(--size-4) + 1vw * 2);
   --font-weight-medium: 500;
   --font-weight-bold: 700;
   --letter-spacing-md: 0.05em;
